deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-app
  labels:
    name: website-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-app
  template:
    metadata:
      labels:
        app: website-app
    spec:
      containers:
        - name: website-app
          image: hoaiphuongdg26/website:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "600m"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
          volumeMounts: 
            - name: website-app-volume 
              mountPath: "/var/www/html/cache"  
      volumes: 
        - name: website-app-volume 
          persistentVolumeClaim: 
            claimName: website-app-pvc
      imagePullSecrets:
        - name: hoaiphuongdg26
---
apiVersion: v1
kind: Service
metadata:
    name: website-app-svc
spec:
    type: ClusterIP
    selector:
        app: website-app
    ports:
        -   port: 80
            targetPort: 80
            protocol: TCP
