ingress.yml
#namespace default
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sample-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 192.168.120.41.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-app-svc
            port:
              number: 80
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack-k-prometheus
            port:
              number: 9090
  - host: grafana.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack
            port:
              number: 80
  - host: alertmanager.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack-k-alertmanager
            port:
              number: 9093
